# Chess-cpp

./: Board.h  CMakeLists.txt  exceptions.h  main.cpp  utils.h
pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
